[gd_scene load_steps=8 format=3 uid="uid://qrvn3nh07xkv"]

[ext_resource type="FontFile" uid="uid://dt7pnq7vqclll" path="res://Jersey10-Regular.ttf" id="1_etwi0"]
[ext_resource type="Script" uid="uid://lujqlk4pwkeq" path="res://scripts/ui.gd" id="1_ohefe"]
[ext_resource type="Texture2D" uid="uid://djl63fyrxf4px" path="res://texture/crosshair.png" id="3_rvqgq"]

[sub_resource type="Animation" id="Animation_rvqgq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimeText/PlusTime:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(219, 148.9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimeText/PlusTime:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kd4iw"]
resource_name = "popup_time"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TimeText/PlusTime:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.38),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(219, 148.9), Vector2(219, 86.985)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TimeText/PlusTime:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.683333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ohefe"]
resource_name = "show_task_text"
length = 2.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kd4iw"]
_data = {
&"RESET": SubResource("Animation_rvqgq"),
&"popup_time": SubResource("Animation_kd4iw"),
&"show_task_text": SubResource("Animation_ohefe")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ohefe")

[node name="TimeText" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
offset_right = 406.0
offset_bottom = 188.0
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("1_etwi0")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[wave][center]TIME: 2:00"

[node name="PlusTime" type="RichTextLabel" parent="TimeText"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.532848
anchor_top = 0.775522
anchor_right = 0.927008
anchor_bottom = 1.1349
offset_left = 2.66371
offset_top = 3.10185
offset_right = 2.6637
offset_bottom = 3.10185
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("1_etwi0")
theme_override_font_sizes/normal_font_size = 50
text = "+0:10"
metadata/_edit_use_anchors_ = true

[node name="DoorText" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -403.0
offset_right = 1.0
offset_bottom = 117.0
grow_horizontal = 0
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("1_etwi0")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[wave][center]DOOR: 0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kd4iw")
}

[node name="Crosshair" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rvqgq")
